--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
     "react-use-gesture": "^9.1.3",
     "typescript": "^4.9.5",
